# noads

./: .copier-answers.yml  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_REORGANIZATION.md  IMAGE_LINKS_FIX.md  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: docs.yml  release.yml
LICENSES/headers/: BSD-0-Clause.txt  CC-BY-SA-4.0.txt  GPL-3.0.txt  LGPL-3.0.txt
docs/: STRUCTURE.md  changelog.md  conf.py  credits.md  credits.md.jinja  index.md  licenses.md  references.bib  sphinx_gallery_sort.py
docs/_static/css/: custom.css
docs/_static/graphs/: all_couplings.dot  energy_mix_complete.dot  energy_mix_impact.dot  general.dot
docs/_templates/autosummary/: module.rst
docs/discussion/: index.md
docs/examples/models/: README.md  plot_demand_calibration.py  plot_demand_scenarios.py  plot_prospective_aircraft.py
docs/examples/models/aircraft/: README.md  plot_current_aircraft.py  plot_prospective_aircraft.py
docs/examples/models/controls/: README.md  plot_controls.py
docs/examples/models/demand/: README.md  plot_demand_calibration.py  plot_demand_scenarios.py
docs/examples/models/energy/: README.md  plot_energy_production.py
docs/examples/models/scenarios/: README.md  plot_ar6_data.py
docs/examples/optimization/: README.md  plot_policy_optimization.py  plot_policy_optimization_robust.py  plot_policy_optimization_tradeoff.py
docs/examples/optimization/ar6_comparison/: README.md  plot_ar6_comparison.py
docs/examples/optimization/baseline/: README.md  plot_compare_baseline.py  run_ssp1_19.py  run_ssp2_26.py  run_ssp5_45.py
docs/examples/optimization/breakthrough/: README.md  plot_compare_breakthrough.py  run_baseline_ref.py  run_breakthrough_availability.py  run_breakthrough_lowdemand.py  run_breakthrough_trend.py
docs/examples/optimization/dropin/: README.md  plot_compare_dropin.py  run_baseline_ref.py  run_dropin_availability.py  run_dropin_lowdemand.py  run_dropin_trend.py
docs/examples/optimization/results/: precompute_missing.py  provenance.txt
docs/examples/optimization/robust_policy/: README.md  plot_compare_robust.py  run_robust_lowdemand.py  run_robust_trend.py
docs/examples/optimization/single_policy/: README.md  energy_mix_prod_conso.dot  fleet.dot  fleet_assembly.dot  plot_baseline.py  plot_breakthrough.py  plot_comparison.py  plot_dropin.py
docs/examples/optimization/single_robust_policy/: README.md  plot_robust.py
docs/examples/scenarios/: README.md  plot_policies_tradeoff.py  plot_robust_policy.py  plot_single_policy.py
docs/extending/: energy_system.md  fleet_partitioning.md  index.md  new_aircraft.md  uncertainty.md
docs/full_results/: index.md
docs/full_results/robust_policy/: index.md
docs/full_results/single_policy/: breakthrough.md  ssp1_fossil.md
docs/getting_started/: concepts.md  index.md  installation.md  quickstart.md
docs/introduction/: index.md
docs/methods/: formulation.md  index.md
docs/model_documentation/: assumptions.md  calibration.md  equations.md  index.md
docs/models/: aircraft.md  demand.md  energy.md  fleet.md  index.md
docs/paper/: conclusion.md  discussion.md  index.md  introduction.md  nomenclature.md  numerical_methods.md  references.md  supplementary-information_v4.tex
docs/paper/latex_src/: biblio.bib  cas-refs.bib  my-manuscript.tex
docs/paper/models/: background_scenarios.md  controls.md  demand.md  energy.md  fleet.md  index.md  optimization.md
docs/paper/results/: baseline.md  index.md  literature_comparison.md  mitigation.md  robust.md
docs/reference/: index.md
docs/results/: full_results.md  index.md
docs/scenario_trends/: discussion.md  index.md  intro_methods.md  main_results.md
docs/user_guide/: core.html  index.md  models.html  scenarios.html
docs/user_guide_extended/: core_concepts.md  index.md  oop_architecture.md  workflow_management.md
requirements/: doc.txt  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt  test-python3.9.txt
src/application/: background_scenario_data.py  base_objects.py  examples.py  scenario_setup.py
src/application/ar6_scenarios_data/: README.txt  electricity_emissions.csv
src/core/models/: interpolation.py  traffic.py
src/core/models/energy/: energy.py  energy_mix.py  production_pathway.py  streams.py
src/core/models/fleet/: aircraft_design.py  aircraft_operation.py  aircraft_tech_parameter.py  base_fleet_mix.py  fleet.py
src/core/scenarios/: multiscenario.py  temporalscenario.py
src/demand_calibration/: __init__.py  calibration_utils.py  dep_logistic_calibration.py  global_rpk.py  regional_departures.py  rpk_logistic_calibration.py
src/demand_calibration/data/: Population.xls
src/gam-v1-jax/models/: engine_model.py  lod_model.py
src/gam-v1-jax/utils/: math.py  unit.py
src/gam_jax/: README.md
src/gam_jax/models/: engine_model.py  generic_airplane_model.py  lod_model.py  usecase.py
src/gam_jax/utils/: data_analysis.py  physical_data.py  unit.py
src/noads/: __init__.py  _data.py  model.py
src/noads/application/: __init__.py  background_scenario_data.py  base_objects.py  examples.py  scenario_setup.py  visualization.py
src/noads/application/ar6_scenarios_data/: aviation_passenger_co2.csv  aviation_passenger_energy.csv  aviation_total_co2.csv  (+3 more)
src/noads/core/: __init__.py  model.py
src/noads/demand_calibration/: __init__.py  calibration_utils.py  global_rpk.py  regional_departures.py
src/noads/gam_jax/: README.md  __init__.py
src/noads/models/: traffic.py  util.py
src/noads/scenarios/: multiscenario.py  temporalscenario.py
src/numerical_optimization_of_aviation_decarbonization_scenarios.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/util/: scenario_data.py  visualization.py
src/util/ar6_scenario_database/: biomass_total.csv  final_electricity.csv  gdp.csv  population.csv
tests/: __init__.py  conftest.py  test_data_loading.py  test_docs.py  test_energy.py  test_fleet.py  test_interpolation.py  test_model.py  test_scenarios.py  test_traffic.py
(+67 files in other folders)
