[project]
name = "noads"
authors = [
    {name = "Ian COSTA ALVES", email = "ian.costa-alves.external@irt-saintexupery.com"}
]
description = "Numerical Optimization of Aviation Decarbonization Scenarios with GEMSEO-JAX"
license = {text = "GNU Lesser General Public License v3"}
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
requires-python = ">=3.9, <3.13"
dependencies = [
    "gemseo-jax >=2.0.2, <3",
    # diffrax <0.7 is incompatible with jax >=0.4.36 (jax.core.ConcreteArray
    # was removed); 0.7.x is the validated series.
    "diffrax >=0.7, <0.8",
    "xlrd >=2.0.1, <2.1",
]

[project.optional-dependencies]
test = [
    "covdefaults",
    "pytest <9",
    "pytest-cov",
    "pytest-xdist",
]
doc = [
    "sphinx >=7",
    "myst-parser",
    "sphinx-book-theme >=1.1",
    "sphinx-gallery",
    "sphinxcontrib-bibtex",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinxcontrib-mermaid",
    "plotly >=5.24.0, <5.24.1",
]

[project.urls]
Homepage = "https://iancostalves.github.io/noads/"
Source = "https://github.com/iancostalves/noads"
Tracker = "https://github.com/iancostalves/noads/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points]
gemseo_plugins = { numerical-optimization-of-aviation-decarbonization-scenarios = "noads" }

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
license-files = [
    "LICENSES/LGPLv3.txt",
    "LICENSES/GPLv3.txt",
]
