[project]
name = "noads"
authors = [
    {name = "Ian COSTA ALVES", email = "ian.costa-alves.external@irt-saintexupery.com"}
]
description = "Numerical Optimization of Aviation Decarbonization Scenarios with GEMSEO-JAX"
license = {text = "GNU Lesser General Public License v3"}
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
# gemseo-jax requires Python >=3.10.
requires-python = ">=3.10, <3.13"
dependencies = [
    "gemseo-jax >=2.0.2, <3",
    # diffrax <0.7 is incompatible with jax >=0.4.36 (jax.core.ConcreteArray
    # was removed); 0.7.x is the validated series.
    "diffrax >=0.7, <0.8",
    # Directly imported by the models, calibration, and background-scenario code.
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    # Excel engines: xlrd for the legacy .xls workbooks, openpyxl for the .xlsx one.
    "xlrd >=2.0.1, <2.1",
    "openpyxl",
]

[project.optional-dependencies]
test = [
    "covdefaults",
    "pytest <9",
    "pytest-cov",
    "pytest-xdist",
]
doc = [
    "sphinx >=7",
    "myst-parser",
    "sphinx-book-theme >=1.1",
    "sphinx-gallery",
    "sphinxcontrib-bibtex",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinxcontrib-mermaid",
    "plotly >=5.24.0, <5.24.1",
]

[project.urls]
Homepage = "https://iancostalves.github.io/noads/"
Source = "https://github.com/iancostalves/noads"
Tracker = "https://github.com/iancostalves/noads/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points]
gemseo_plugins = { numerical-optimization-of-aviation-decarbonization-scenarios = "noads" }

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
license-files = [
    "LICENSES/LGPLv3.txt",
    "LICENSES/GPLv3.txt",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the bundled data files so an installed package can load them (they are
# resolved package-relative via noads._data.data_file, not from the CWD). The
# data directories are not packages themselves, so they are declared as data of
# their parent package via a relative glob.
"noads.application" = ["ar6_scenarios_data/*.csv"]
"noads.demand_calibration" = ["calibration_data/*.xls", "calibration_data/*.xlsx"]
